<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World!</string>
    <string name="app_name">Maia Lite</string>
    <string name="goodMorning">Good Morning</string>
    <string name="hi">Hi</string>
    <string name="goodAfternoon">Good afternoon</string>
    <string name="goodEvening">Good evening</string>
    <string name="sayIt">Say it!</string>
    <string name="stop">Stop!</string>    
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tusday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="salutationExtra1">How Maia will call you (your name, my master etc.)</string>
    <string name="sunday">Sunday</string>
    <string name="celsius">Degrees Celsius</string>
    <string name="fahrenheit">Degrees Fahrenheit</string>
    <string name="weatherTemplate" formatted="false">The temperature outside %s is %s %s. %s. </string>
    <string name="headlines">Some of the local headlines today include. </string>
    <string name="noEvents">You have no events in the calendar for the next %s hours.</string>
    <string name="eventsInCalendar" formatted="false">For the next %s hours, you have %s events in the calendar. These are:</string>
    <string name="eventsInCalendarSingle">For the next %s hours, you have 1 event in the calendar:</string>
    <string name="eventsInCalendarConstrained" formatted="false">For the next %s hours, you have %s events in the calendar. The first %s are:</string>
    <string name="eventTemplate" formatted="false">%s at %s.</string>
    <string name="first">First</string>
    <string name="second">second</string>
    <string name="newsSource">News Source Feed</string>
    <string name="newsSourceName">News Source Name</string>
    <string name="currentNewsFeed">Current %s %s news include</string>
    <string name="third">third</string>
    <string name="fourth">fourth</string>
    <string name="fifth">fifth</string>
    <string name="sixth">sixth</string>
    <string name="seventh">seventh</string>
    <string name="eight">eight</string>
    <string name="nineth">nineth</string>
    <string name="tenth">tenth</string>
    <string name="eleventh">eleventh</string>
    <string name="twelfth">twelfth</string>
    <string name="thirteenth">thirteenth</string>
    <string name="fourteenth">fourteenth</string>
    <string name="fifteenth">fifteenth</string>
    <string name="sixteenth">sixteenth</string>
    <string name="seventeenth">seventeenth</string>
    <string name="eighteenth">eighteenth</string>
    <string name="nineteenth">nineteenth</string>
    <string name="twentieth">twentieth</string>
    <string name="twentyFirst">twenty first</string>
    <string name="twentySecond">twenty second</string>
    <string name="twentyThird">twenty third</string>
    <string name="twentyFourth">twenty fourth</string>
    <string name="twentyFifth">twenty fifth</string>
    <string name="twentySixth">twenty sixth</string>
    <string name="twentySeventh">twenty seventh</string>
    <string name="twentyEight">twenty eight</string>
    <string name="twentyNineth">twenty nineth</string>
    <string name="thirtieth">thirtieth</string>
    <string name="thirtyFirst">thirty first</string>
    <string name="view">View</string>
    <string name="greetingDetails">Say List Details</string>
    <string name="timeOfDay">Time of Day (Good Morning/Afternoon etc.)</string>
    <string name="calendarAppointments">Calendar Appointments</string>
    <string name="currentTime">Current Time</string>
    <string name="localNews">Local News</string>
    <string name="salutation">Salutation</string>
    <string name="weather">Weather</string>
    <string name="configure">Configure</string>
    <string name="remove">Remove</string>
    <string name="up">Move Up</string>
    <string name="down">Move Down</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="providerConfigureName">Configure element</string>
    <string name="newsProvider">News Provider</string>
    <string name="add">Add</string>
    <string name="currentTimeTemplate" formatted="false">It is %s %s %s, %s, %s of %s.</string>
    <string name="techNews">Technology News</string>
    <string name="skipThis">Skip This</string>
    <string name="pleaseWait">Please wait...</string>
    <string name="stockQuoteLabel">Enter stock symbols separated by comma. Example: aapl,goog,msft</string>
    <string name="stockQuotes">Stock Quotes</string>
    <string name="Play">Play</string>
    <string name="Actions">Actions</string>
    <string name="viewConfigure">View / Configure</string>
    <string name="tapToChangeName">[tap here to change the name]</string>
    <string name="name">Name</string>
    <string name="dailyHoroscope">Daily Horoscope</string>
    <string name="dailyHoroscopeConfigure">Set your sign to tell your daily horoscope from astrology.com or astrosage.com!</string>
    <string name="dailyHoroscopePrelude">Your daily horoscope from %s says:</string>
    <string name="setYourSign">Please set your sign</string>
    <string name="addGreeting">Add Say List</string>
    <string name="aboutMenu">About</string>
    <string name="latestStockQuotes">The latest stock quotes from Yahoo finance are: </string>
    <string name="setHoroscopeSource">Please choose a source your horoscope will be taken from</string>
    <string name="showTopNews">Please choose the number of stories to tell</string>
    <string name="currentTopNews">Current Top News</string>
    <string name="topSportNews">Top Sport News</string>
    <string name="temperatureIsSaidIn">The temperature is said in</string>
    <string name="clickToSetYourSign">[tap to set your sign]</string>
    <string name="fallbackOne">There was an error while trying to speak %s. Please check your Internet connection.</string>
    <string name="wasMovedUpToPosition">%s was moved up to position %s, right before %s.</string>
    <string name="wasMovedDownToPosition">%s was moved down to position %s, right after %s.</string> 
    <string name="aboutHeader">About Maia</string>   
    <string name="about">Maia is your personal android assistant telling you the most important news, the weather and even your horoscope.\nThe app allows flexible configuration and will be able to work with any text-to-speech engine that you put on the phone.\n\n</string>
    <string name="shakeToSkip">Shake to skip</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="jokeOfTheDay">A Joke</string>
    <string name="hereIsAJoke">One of my jokes for today is: </string>
    <string name="aboutSpeakHeader">Tap the microphone button and try sayng something like:</string>
    <string name="aboutSpeakRecognition">About Speech Recognition</string>   
    <string name="speakHelp">\n\n - What is the time?\n\n - Tell me my horoscope.\n\n - Tell me the news.\n\n - Tell me the sport news.\n\n - Bring me some technology news.\n\n - What are the local news?\n\n - What is in my calendar?\n\n - Tell me a joke.\n\n - What is the weather?\n\n - Tell me the stock quotes.\n\n</string>  
</resources>
