<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5sp"
    >
    
<TextView 
 	android:layout_width="fill_parent"
    android:layout_height="wrap_content"    
    android:text="@string/name"
    android:textSize="25sp"/>    

<EditText 
 	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/nameText"   
    />
	

	<Button
		android:text="@string/ok"
		android:id="@+id/okButton"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>    
    <Button
		android:text="@string/cancel"
		android:id="@+id/cancelButton"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>    
</LinearLayout>