<?xml version="1.0" encoding="utf-8"?>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    >
		    
		<TextView 
		 	android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textSize="25sp"
		    android:id="@+id/nameText"/>
		    
		<ScrollView 
		 	android:layout_width="fill_parent"
		    android:layout_height="fill_parent" 
		    android:fillViewport="true"
		    android:id="@+id/scroll"
		 >   
		 <LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical">
		 
		 <TextView 
		 	android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textSize="22sp"
		    android:text="@string/setYourSign"/>
		   
		 <Spinner android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:id="@+id/signSpinner"/>
			
			
	     <TextView 
		 	android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textSize="22sp"
		    android:text="@string/setHoroscopeSource"/>
		   
		 <Spinner android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:id="@+id/sourceSpinner"/>

<Button
android:layout_width="fill_parent" 
android:layout_height="wrap_content" 
				android:text="@string/ok"
				android:id="@+id/okButton">
		    </Button>
		    <Button
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
				android:text="@string/cancel"
				android:id="@+id/cancelButton">
		    </Button>
</LinearLayout>
</ScrollView>    
</LinearLayout>