<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10sp"
    >
    
<ScrollView 
 	android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:layout_weight="100"    
    android:id="@+id/scroll"
 >   
 
 <LinearLayout 
 	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/workPanel"
 >
 <TextView
 	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="25sp"	
	android:text="@string/aboutHeader"/>
	
 <TextView
 	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:textSize="20sp"	
	android:text="@string/about"/>
 
 <Button 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/ok"
	android:id="@+id/okButton"/>
	

			
 </LinearLayout>
 </ScrollView>    
</LinearLayout>
